--- a/config/database.yml
+++ b/config/database.yml
@@ -14,32 +14,19 @@
 # Configure Using Gemfile
 # gem 'pg'
 #
-development:
+default: &default
   adapter: postgresql
   encoding: unicode
-  database: nomster_development
+  # For details on connection pooling, see rails configuration guide
+  # http://guides.rubyonrails.org/configuring.html#database-pooling
   pool: 5
   username: postgres
   password: password
   host: localhost
 
-test:
-  adapter: postgresql
-  encoding: unicode
-  database: nomster_test
-  pool: 5
-  username: postgres
-  password: password
-  host: localhost
-  
-  production:
-  adapter: postgresql
-  encoding: unicode
-  database: nomster_production
-  pool: 5
-  username: postgres
-  password: password
-  host: localhost
+development:
+  <<: *default
+  database: nomster_development
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -71,9 +58,9 @@ test:
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
-#test:
-  #<<: *default
-  #database: nomster_test
+test:
+  <<: *default
+  database: nomster_test
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -94,8 +81,8 @@ test:
 #   production:
 #     url: <%= ENV['DATABASE_URL'] %>
 #
-#production:
-#  <<: *default
-#  database: nomster_production
-#  username: nomster
-#  password: <%= ENV['NOMSTER_DATABASE_PASSWORD'] %>
+production:
+  <<: *default
+  database: nomster_production
+  username: nomster
+  password: <%= ENV['NOMSTER_DATABASE_PASSWORD'] %>
